[package]
name = "rabbitink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.63.0"

[dependencies]
anyhow = "1.0.68"
env_logger = "0.10.0"
log = "0.4.17"
nix = { version = "0.26.2", features = ["ioctl", "fs"] }
clap = { version = "4.1.4", features = ["derive"] }
libc = "0.2.139"
xcb = { version = "1.2.0", features = ["shm", "xfixes", "shape"] }
wgpu = "0.15.1"
pollster = "0.3.0"

[dev-dependencies]
criterion = "0.4.0"
opencv = { version = "0.75", default-features = false, features = ["imgproc", "imgcodecs"]}
image = "0.24.5"

[[bench]]
name = "imgproc_bench"
harness = false

# [[example]]
# name = "dithering"