[package]
name = "rabbitink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native_scsi"]
native_scsi = []

[build-dependencies]
bindgen = "0.63.0"

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
env_logger = "0.10.0"
log = "0.4.17"
clap = { version = "4.1.4", features = ["derive"] }
libc = "0.2.139"
wgpu = "0.15.1"
pollster = "0.3.0"
opencv = { version = "0.75", optional = true, default-features = false, features = ["imgproc", "imgcodecs"]}
signal-hook = "0.3.15"
rusb = "0.9.1"
regex = "1.7.1"
scrap = "0.5"

[target.'cfg(target_os="linux")'.dependencies]
xcb = { version = "1.2.0", features = ["shm", "xfixes", "shape", "screensaver"] }
nix = { version = "0.26.2", features = ["ioctl", "fs"] }

[dev-dependencies]
criterion = "0.4.0"
image = "0.24.5"

[[example]]
name = "showimg"

[[example]]
name = "clock"
required-features = ["opencv"]

[[example]]
name = "grid"
required-features = ["opencv"]

[[example]]
name = "screenshot"
required-features = ["opencv"]
